<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>it.zero11.xroads</groupId>
    <artifactId>xroads</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
 
    <name>Xroads Parent</name>
 
	<properties>
		<revision>3.1.13</revision>
		<javax.servlet.api.version>3.1.0</javax.servlet.api.version>
		<vaadin.version>23.3.7</vaadin.version>
		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
		
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	
	<repositories>
		<repository>
			<id>vaadin-addons</id>
			<url>http://maven.vaadin.com/vaadin-addons</url>
		</repository>
	</repositories>
	
	<build>
  <plugins>
    <plugin>
      <groupId>org.codehaus.mojo</groupId>
      <artifactId>flatten-maven-plugin</artifactId>
      <version>1.1.0</version>
      <configuration>
        <updatePomFile>true</updatePomFile>
        <flattenMode>resolveCiFriendliesOnly</flattenMode>
      </configuration>
      <executions>
        <execution>
          <id>flatten</id>
          <phase>process-resources</phase>
          <goals>
            <goal>flatten</goal>
          </goals>
        </execution>
        <execution>
          <id>flatten.clean</id>
          <phase>clean</phase>
          <goals>
            <goal>clean</goal>
          </goals>
        </execution>
      </executions>
    </plugin>
  </plugins>
  </build>
  
	<modules>
	    <module>xroads-core</module>
	    <module>xroads-server</module>
	    <module>xroads-module-core</module>
	    <module>xroads-module-rewix</module>
  </modules>

    <dependencies>
     
    </dependencies>
</project>
